@@ -48,7 +48,7 @@ init_slideshow_mode (void)
 	    feh_draw_filename (w);
 	  if (!opt.progressive)
 	    winwidget_show (w);
-	  if (opt.slideshow_delay > 0)
+	  if (opt.slideshow_delay >= 0)
 	    feh_add_timer (cb_slide_timer, w, opt.slideshow_delay,
 			   "SLIDE_CHANGE");
 	  else if (opt.reload > 0)
@@ -219,7 +219,7 @@ slideshow_change_image (winwidget winwid, int change)
        * show was deleted? */
       eprintf ("No more slides in show");
     }
-  if (opt.slideshow_delay > 0)
+  if (opt.slideshow_delay >= 0)
     feh_add_timer (cb_slide_timer, winwid, opt.slideshow_delay,
 		   "SLIDE_CHANGE");
 }
